Uploaded new improved home page - index.html
Uploaded new improved home page - index.html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,37 @@
 
 		</div>
 
-		! add here 
+		<div class="sofcity">
+
+			<div class="softitle">
+				<h1>Speciality of Nashik</h1>
+
+				<div class="imagesilder"></div>
+				<div class="para">
+					<p align="right">
+
+						Nashik is famous for its temples, it is known as haridwar of south sometimes because river
+						Godavari whcih flows across Nashik is considered as Ganga of South. Nashik is the place where
+						famous Kumbh Mela is held after every 12 year at triambakeshwar temple. This also place place
+						famous for the residence of Lord Rama during his Vanvas.
+						Nashik is also famous from Independent struggle when Dr. Ambedkar led the moment for Dalit's by
+						entering the Kala Ram temple. Nashik is also the native place of Damodar Sawarkar and DadaSaheb
+						Phalke.
+						Now, coming up to today times. Nashik is very famous for it uber cool cliamte. The winters are
+						chilly and summers are not so hot here. Nashik is known as Grape/ Wine capital of India, A large
+						amount of grapes and wine are exported from here to other parts of world/ you should read about
+						brand SULA Wines/ Soma / York wines.
+						Nashik has been circled by many PSU like HAL and ISP( Indian Printing Press) and also for
+						Devlali cantonment.
+						Nashik has been a cluster for many big industries like Mahindra, Bosch, ABB, Crompton Greaves,
+						Lear, Thyssenkrup, CEAT , Asian paints and others. Recently there has been hike in Industries
+						related to Automation sector and few ITES firms.
+						So summing up nashik is famous for its deep roots to Indian mythology, climate, Grapes and Wine
+						sindustries.
+					</p>
+
+				</div>
+			</div>
 
 			<div class="readmbut">
 
