Updated Index.html nashi city Infos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
 				caves.Having many temples and pilgrimage sites, Nashik is known to be a holy city for Hindus in India.
 				Nashik has always been the centre of commerce and tra1de in India since historical past. Many historic
 				events of the Indian freedom struggle too had been occurred in this place. Ramkund, Muktidham Temple,
-				Coin Museum and Pandavleni Caves are some of the important tourist sites of Nashik.
+				Coin Museum and Pandavleni Caves are some of the important tourist sites of Nashik.Nashik is an ancient 
+				holy city in Maharashtra, a state in western India. It’s known for its links to the “Ramayana” epic poem.
+				On the Godavari River is Panchavati, a temple complex. Nearby, Lord Rama was thought to have bathed at Ram 
+				Kund water tank, today attended by Hindu devotees. Shri Kalaram Sansthan Mandir is an ancient shrine to Rama, 
+				while Rama and Sita are said to have worshipped at Sita Gufaa caves
 
 			</p>
 
@@ -148,11 +152,7 @@
 						brand SULA Wines/ Soma / York wines.
 						Nashik has been circled by many PSU like HAL and ISP( Indian Printing Press) and also for
 						Devlali cantonment.
-						Nashik has been a cluster for many big industries like Mahindra, Bosch, ABB, Crompton Greaves,
-						Lear, Thyssenkrup, CEAT , Asian paints and others. Recently there has been hike in Industries
-						related to Automation sector and few ITES firms.
-						So summing up nashik is famous for its deep roots to Indian mythology, climate, Grapes and Wine
-						sindustries.
+						
 					</p>
 
 				</div>
@@ -296,7 +296,7 @@
 			</div>
 			<div class=" copy">
 				<p>
-					@Adistarcoders.com - &copy; Copyright 2020
+					@Adisoft.com - &copy; Copyright 2021
 				</p>
 			</div>
 		</div>
